# BiPoModule

./: .gitignore
mc_test/: #reco_config#  BiPo.C  BiPo_0.C  Exposures.C  ScriptsGenerator.C  fitted_ab_source_sel.txt  fitted_ab_tracker_sel.txt  reco_config  reco_config1  reco_config_BiPo_tracker_aw  reco_config_BiPo_tracker_fw  reco_config_alphafinder  script_reco_BiPo_100000ev.csh  script_reco_Bi_100000ev.csh  script_simul_BiPo_100000ev.csh  script_simul_Bi_100000ev.csh  seeds.txt  simul_config  simul_config1  simul_config_BiPo  simul_config_BiPo_source_bulk  simul_config_BiPo_source_surface  simul_config_BiPo_tracker_aw  simul_config_BiPo_tracker_fw
mc_test/Module_BiPo/: BiPo.cc  BiPo.h  CMakeLists.txt
mc_test/Module_BiPo_build/: build.sh
mc_test/Module_SimulAna/: CMakeLists.txt  CMakeLists.txt~  SimulAna.cc  SimulAna.cc~  SimulAna.h
mc_test/Module_SimulAna_build/: CMakeCache.txt  Makefile  build.sh  cmake_install.cmake  libSimulAna.dylib
mc_test/configs/reconstruction/: reco_config  reco_config_Bi  reco_config_BiPo  reco_config_BiPo_source_bulk  reco_config_BiPo_source_surface  reco_config_BiPo_tracker_all  reco_config_BiPo_tracker_fw  reco_config_alphafinder
mc_test/configs/simulation/: old_seeds_old.conf  seeds.conf  simul_config1  simul_config_Bi  simul_config_BiPo_source_all_surface  simul_config_BiPo_source_surface  simul_config_BiPo_tracker_aw  simul_config_BiPo_tracker_fw  simul_config_BiPo_tracker_fw_1
mc_test/root_files/: TreeMerger.C
